--- a/HW_Info.Rmd
+++ b/HW_Info.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ---
 
 ```{r results="asis", echo=FALSE}
-source("~/Github/MATH456/stylesheets/custom.R")
+source("C:/Github/MATH456/stylesheets/custom.R")
 ```
 
 Navbar: [[Home]](index.html) [[Schedule]](Schedule.html) [[Google Group]](https://groups.google.com/forum/#!forum/csuc_stat)  [[Google Drive]](https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&usp=sharing)
